recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:16: error: not found: value lenght
		avance(lenght) ;
                       ^SquareKoch:18: error: not found: value lenght
	squareSide(levels-1 , lenght/3)
                              ^SquareKoch:20: error: not found: value lenght
	squareSide(levels-1 , lenght/3)
                              ^SquareKoch:22: error: not found: value lenght
	squareSide(levels-1 , lenght/3)
                              ^SquareKoch:24: error: not found: value lenght
	squareSide(levels-1 , lenght/3)
                              ^SquareKoch:26: error: not found: value lenght
	squareSide(levels-1 , lenght/3)
                              ^