recursion.lessons.recursion.koch.SquareKoch.scala.code
def snowSquare (levels:Int, length:Double) {
    squareSide(levels, length);
    right(90);
    setColor(Color.blue);
    squareSide(levels, length);
    right(90);
    setColor(Color.orange);
    squareSide(levels, length);
    right(90);
    setColor(Color.magenta);
    squareSide(levels, length);
    right(90);
}
def squareSide(levels:Int, length:Double) {
	if(length == 0){
		avance(lenght) ;
	} else {
	squareSide(levels-1 , lenght/3)
	gauche(90)
	squareSide(levels-1 , lenght/3)
	droite(90)
	squareSide(levels-1 , lenght/3)
	droite(90)
	squareSide(levels-1 , lenght/3)
	gauche(90)
	squareSide(levels-1 , lenght/3)
	
	}
}
